# open-data-jalisco

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: __init__.py  main.py
configs/municipalities/: example.yaml
configs/sources/: example.yaml
datasets/sources/: tala.yaml  tequila.yaml
docs/: API.md  FRONTEND_GUIDE.md  INDEXING.md  MANIFEST.md
infra/: refresh.sh
infra/postgres/: init.sql
scripts/: bootstrap.ps1
src/open_data_jalisco/: __init__.py  cli.py  search_service.py  titling.py
src/open_data_jalisco/agent/: __init__.py  ask.py  router.py
src/open_data_jalisco/api/: app.py  deps.py  schemas.py
src/open_data_jalisco/discovery/: __init__.py  candidates_ingest.py  candidates_inspect.py  sapumu_scan.py
src/open_data_jalisco/domain/: chunk.py  document.py  (+3 more)
tests/: conftest.py
tests/integration/: test_api_health.py
tests/unit/: _api_helpers.py  test_agent_ask.py  test_agent_router.py  test_api_ask.py  test_api_manifests.py  test_api_rerank.py  test_api_search.py  test_api_semantic_search.py  test_api_source.py  test_candidates_ingest.py  test_candidates_ingest_resumable.py  test_candidates_inspect.py  test_chunker.py  test_dedupe_by_sha256.py  test_docx_xls_extractors.py  test_dummy_embeddings.py  test_extractor_xlsx.py  test_hashing.py  test_ingest_options.py  test_jurisdiction.py  test_llm_openai_compat.py  test_local_st_embeddings.py  test_local_storage.py  test_logging_middleware.py  test_manifest_generator.py  test_pdf_sanitize.py  test_pipeline_title_embedding.py  test_process_retry_failed.py  test_sapumu_parser.py  test_sapumu_scan.py  test_sapumu_scraper.py  test_scraper_discovery.py  test_scraper_seed_planning.py  test_scraper_validation.py  test_search_hybrid.py  test_source_loader.py  test_titling.py  test_url_year_inference.py
web/: .dockerignore  .env.example  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/public/: llms.txt  site.webmanifest  sitemap.xml
web/scripts/: generate-seo.mjs
web/src/: ApiDocs.tsx  App.tsx  Assistant.tsx  Explorer.tsx  Feedback.tsx  Landing.tsx  PntGuide.tsx  api.ts  styles.css
(+61 files in other folders)
