[project]
name = "open-data-jalisco"
version = "0.1.0"
description = "Plataforma cívica open source para recopilar, preservar, indexar y consultar información pública municipal con trazabilidad a fuentes oficiales."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "open-data-jalisco contributors" }]
keywords = ["civic-tech", "open-data", "transparency", "rag", "jalisco", "mexico"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pypdf>=5.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "lxml>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=9.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
open-data-jalisco = "open_data_jalisco.cli:app"
odj = "open_data_jalisco.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/open-data-jalisco"
Repository = "https://github.com/your-org/open-data-jalisco"
Issues = "https://github.com/your-org/open-data-jalisco/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_data_jalisco"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require external services (postgres, network)",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
